alteração get(0) para getFirst()